<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:background="@drawable/changfangxing"
    android:baselineAligned="false"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/id_tab_health"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="103dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:contentDescription="@string/txt2"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/health1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/txt2"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_acts"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:contentDescription="@string/txt3"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/huodong1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/txt3"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_share"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:contentDescription="@string/txt4"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/share1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/txt4"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_my"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:background="@android:color/background_light"
            android:clickable="false"
            android:contentDescription="@string/txt5"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/my1" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/txt5"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
